2006-02-24 [wwp]	2.0.0cvs80

	* src/mainwindow.c
		use GTK+'s stock quit button. Patch by Fabien Vantard.

2006-02-24 [paul]	2.0.0cvs79

	* src/news.c
	* src/news.h
	* src/news_gtk.c
		fix bug 916, 'newsgroup unsubscribe segmentation fault'
		Thanks to Colin

2006-02-23 [colin]	2.0.0cvs78

	* src/alertpanel.c
		Change OK to Close in alertpanel with View log
		button; add accel to View log. Patch by Fabien
		Vantard

2006-02-23 [wwp]	2.0.0cvs77

	* src/compose.c
		silly me, there were much more tests to perform, since toolbars can
		really have down to 1 element only.

2006-02-23 [wwp]	2.0.0cvs76

	* commitHelper
		fixed indentation from my previous commit. Fallback to VISUAL if
		EDITOR is not set (and to vi, at last resort).

2006-02-23 [wwp]	2.0.0cvs75

	* commitHelper
		improved error detection (Colin, me).

2006-02-23 [wwp]	2.0.0cvs74

	* src/prefs_toolbar.c
		simplify and fix prefs/toolbars layouting. Combos' contents can
		now be really displayed.

2006-02-23 [wwp]	2.0.0cvs73
	simplifies and fix prefs/toolbars layouting. Combos' contents can now
	be really displayed.

2006-02-22 [wwp]	2.0.0cvs72

	* src/compose.c
		fix a typo in my previous commit (sorry!).

2006-02-22 [wwp]	2.0.0cvs71

	* src/prefs_toolbar.c
		fix a crash when adding separators to toolbars,
		also fix some separator item information.

2006-02-22 [wwp]	2.0.0cvs70

	* src/compose.c
		fix a crash when redirecting (for instance) when compose window's
		toolbar contents has been customized (when some buttons have been
		removed in fact).

2006-02-21 [wwp]	2.0.0cvs69

	* src/summaryview.c
	* src/gtk/pluginwindow.c
	* src/plugins/pgpcore/prefs_gpg.c
		fix some compilation warnings (feat. remains of removed code).

2006-02-21 [wwp]	2.0.0cvs68

	* src/gtk/gtkutils.c
		fix two compilation issues, thanks to Stephan Sachse.

2006-02-20 [colin]	2.0.0cvs67

	* src/mainwindow.c
		Don't reselect displayed mail on refocus
		This fixes actions misbehaving 

2006-02-20 [wwp]	2.0.0cvs66

	* src/summaryview.c